syntax = "proto3";

package metric;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/wathermg/topmetrics/pkg/metric";


message ProcessInfo {
  int32 pid = 1;
  string name = 2;
  double cpu_percent = 3;
  double memory_usage = 4;
}

message Metric {
  string host_id = 1;
  string hostname = 2;
  google.protobuf.Timestamp sent_at = 3;
  repeated ProcessInfo processes = 4;
}